# NQPV

./: .gitignore  NOTICE  NQPV_ast.py  NQPV_la.py  NQPV_lexer.py  NQPV_opt.py  NQPV_parser.py  NQPV_verifier.py  README.md  __init__.py  backward_transformer.py  evaluate.ipynb  example.py  lexer.py  operator_create.py  parser.py  semantics_analyser.py  set_order.py  setup.cfg  test_install.py
example_Deutsch/: prog
example_ErrCorr/: prog
example_QWalk/: prog
examples/BB84/: example.py  prog.nqpv
examples/Deutsch Algorithm/: example.py
examples/Deutsch Algorithm/example_Deutsch/: prog.nqpv
examples/Deutsch_algorithm/: example.py  prog.nqpv
examples/Error Correction Code/: example.py
examples/Error Correction Code/example_ErrCorr/: prog.nqpv
examples/Grover/: example.py  prog.nqpv
examples/GroverN/: example.py  test_result.txt
examples/Quantum Walk/: example.py
examples/coin_tossing/: example.py  prog.nqpv
examples/error_correction_code/: example.py  prog.nqpv
examples/quantum_walk/: example.py  prog.nqpv
nqpv/: NQPV_ast.py  NQPV_la.py  NQPV_lexer.py  NQPV_parser.py  NQPV_verifier.py  __init__.py  backward_transformer.py  entrance.py  id_env.py  lib_create.py  logsystem.py  opt_create.py  optlib_inject.py  semantics_analyser.py  set_order.py  settings.py  tools.py  verifier.py
nqpv/dts/: __init__.py  type_hierarchy.py
nqpv/semantics/: id_env.py  optEnv.py  optQvarPair.py  opt_env.py  opt_qvar_pair.py  qLA.py  qPre.py  qProofOutline.py  qVar.py  qprogNondet.py  qprogStd.py  qprog_nondet.py  qprog_proof_outline.py  qprog_std.py  semantics_analyser.py
nqpv/syntaxes/: NQPV_ast.py  NQPV_lexer.py  NQPV_parser.py  pos_info.py  qlexer.py  qparser.py
nqpv/vsystem/: opt_kernel.py  optenv.py  optenv_inject.py  settings.py  var_scope.py  vkernel.py
nqpv/vsystem/content/: opt_kernel.py  opt_pair_term.py  opt_term.py  prog_term.py  proof_hint_term.py  proof_tacits.py  proof_term.py  qpre_term.py  qvarls_term.py  scope_term.py
nqpv/vsystem/syntax/: ast.py  pos_info.py  vlexer.py  vparser.py
nqpv_new/dts/: __init__.py  type_hierarchy.py
nqpv_new/vsystem/: log_system.py  optenv_inject.py  var_env.py  venv.py  vkernel.py
nqpv_new/vsystem/content/: content_tools.py  opt_kernel.py  opt_pair_term.py  opt_term.py  prog_term.py  proof_term.py  qpre_term.py  qvarls_term.py  (+1 more)
(+12 files in other folders)
