[metadata]
name = NQPV
version = 0.1b3
author = Yingte Xu
author_email = lucianoxu@foxmail.com
description = An assistant tool for the formal verification of nondeterministic quantum programs.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/LucianoXu/NQPV
platform = Windows, Linux, MacOS
keywords = quantum programs, program verification, automatic theorem proving
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    cvxpy
    ply
