
# Copyright 2022 Yingte Xu
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[metadata]
name = NQPV
version = 0.2b3
author = Yingte Xu
author_email = lucianoxu@foxmail.com
description = An assistant tool for the formal verification of nondeterministic quantum programs.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/LucianoXu/NQPV
platform = Windows, Linux, MacOS
keywords = quantum programs, program verification, automatic theorem proving
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    cvxpy
    ply
